--- a/404.html
+++ b/404.html
@@ -30,13 +30,20 @@
             </div>
             <div class='navigationbar'>
                 <ul>
-                    <li><a href='https://hytheaway.github.io'>home</a></li>
+                    <li><a href='https://hytheaway.github.io/'>home</a></li>
                     |
                     <li><a href='https://hytheaway.github.io/projects.html'>projects</a></li>
                     |
                     <li><a href='https://hytheaway.github.io/journal.html'>journal</a></li>
                     |
                     <li><a href='https://hytheaway.github.io/contact.html'>contact</a></li>
+                    |
+					<div class="dropdown">
+						<span class="dropbutton"><a href="">more</a></span>
+						<div class="dropdown-content">
+							<a href="https://hytheaway.github.io/options.html">options</a>
+						</div>
+					</div>
                 </ul>
             </div>
             <hr>
@@ -64,3 +71,16 @@
 </body>
 
 </html>
+
+<script>
+    const font_stylesheet = new CSSStyleSheet();
+    try {
+            font_stylesheet.insertRule(sessionStorage.font);
+    }
+    catch (error) {
+        font_stylesheet.insertRule("html { font-family: 'DotGothic16'; }");
+    }
+    finally {
+        document.adoptedStyleSheets = [font_stylesheet];
+    }
+</script>
