--- a/contact.html
+++ b/contact.html
@@ -36,6 +36,13 @@
 					<li><a href='journal.html'>journal</a></li>
 					|
 					<li><a href='contact.html'>contact</a></li>
+					|
+					<div class="dropdown">
+						<span class="dropbutton"><a href="">more</a></span>
+						<div class="dropdown-content">
+							<a href="options.html">options</a>
+						</div>
+					</div>
 				</ul>
 			</div>
 			<hr style="color: white;">
@@ -52,6 +59,7 @@
 	</footer>
 
 </body>
+
 </html>
 
 <style>
@@ -61,4 +69,34 @@
 	body:before {
 		background: black no-repeat center center;
 	}
+	.dropdown-content {
+		background-color: black;
+		border-width: 1px;
+	}
+	.dropdown-content a {
+		border-color: white;
+	}
+	.dropdown-content a:hover {
+		background-color: white;
+		color: black;
+		border-color: white;
+	}
+	.dropdown:hover .dropdown-content {
+		background-color: black;
+		border-width: 1px;
+		border-color: white;
+	}
 </style>
+
+<script>
+	const font_stylesheet = new CSSStyleSheet();
+	try {
+			font_stylesheet.insertRule(sessionStorage.font);
+	}
+	catch (error) {
+		font_stylesheet.insertRule("html { font-family: 'DotGothic16'; }");
+	}
+	finally {
+		document.adoptedStyleSheets = [font_stylesheet];
+	}
+</script>
