--- a/fav-music/index.html
+++ b/fav-music/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel='icon' type='image/x-icon' href='assets/the-best-fav.gif'>
-    <link href='https://fonts.googleapis.com/css?family=DotGothic16' rel='stylesheet'>
+    <!-- <link href='https://fonts.googleapis.com/css?family=DotGothic16' rel='stylesheet'> -->
     <link rel='stylesheet' href='../styles.css'>
 </head>
 
@@ -35,6 +35,13 @@
                     <li><a href='journal.html'>journal</a></li>
                     |
                     <li><a href='contact.html'>contact</a></li>
+                    |
+					<div class="dropdown">
+						<span class="dropbutton"><a href="">more</a></span>
+						<div class="dropdown-content">
+							<a href="options.html">options</a>
+						</div>
+					</div>
                 </ul>
             </div>
             <hr>
@@ -113,3 +120,16 @@
 </body>
 
 </html>
+
+<script>
+    const font_stylesheet = new CSSStyleSheet();
+	try {
+			font_stylesheet.insertRule(sessionStorage.font);
+	}
+	catch (error) {
+		font_stylesheet.insertRule("html { font-family: 'DotGothic16'; }");
+	}
+	finally {
+		document.adoptedStyleSheets = [font_stylesheet];
+	}
+</script>
