--- a/me.html
+++ b/me.html
@@ -35,6 +35,13 @@
                     <li><a href='journal.html'>journal</a></li>
                     |
                     <li><a href='contact.html'>contact</a></li>
+                    |
+					<div class="dropdown">
+						<span class="dropbutton"><a href="">more</a></span>
+						<div class="dropdown-content">
+							<a href="options.html">options</a>
+						</div>
+					</div>
                 </ul>
             </div>
             <hr>
@@ -99,6 +106,7 @@
     </footer>
 
 </body>
+</html>
 
 <style>
     p {
@@ -117,4 +125,15 @@
     }
 </style>
 
-</html>
+<script>
+    const font_stylesheet = new CSSStyleSheet();
+	try {
+			font_stylesheet.insertRule(sessionStorage.font);
+	}
+	catch (error) {
+		font_stylesheet.insertRule("html { font-family: 'DotGothic16'; }");
+	}
+	finally {
+		document.adoptedStyleSheets = [font_stylesheet];
+	}
+</script>
