--- a/projects/fourierifier.html
+++ b/projects/fourierifier.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel='icon' type='image/x-icon' href='../assets/the-best-fav.gif'>
-    <link href='https://fonts.googleapis.com/css?family=DotGothic16' rel='stylesheet'>
+    <!-- <link href='https://fonts.googleapis.com/css?family=DotGothic16' rel='stylesheet'> -->
     <link rel='stylesheet' href='../styles.css'>
 </head>
 
@@ -37,6 +37,13 @@
                     <li><a href='../journal.html'>journal</a></li>
                     |
                     <li><a href='../contact.html'>contact</a></li>
+                    |
+					<div class="dropdown">
+						<span class="dropbutton"><a href="">more</a></span>
+						<div class="dropdown-content">
+							<a href="../options.html">options</a>
+						</div>
+					</div>
                 </ul>
             </div>
             <hr>
@@ -64,6 +71,8 @@
 
 </body>
 
+</html>
+
 <script>
     var pkmnVideoElement = document.getElementById("pkmnVideo");
 
@@ -80,6 +89,15 @@
         zoomer.style.objectPosition = 50 + '%' + 50 + '%';
     }
 
-</script>
+    const font_stylesheet = new CSSStyleSheet();
+    try {
+            font_stylesheet.insertRule(sessionStorage.font);
+    }
+    catch (error) {
+        font_stylesheet.insertRule("html { font-family: 'DotGothic16'; }");
+    }
+    finally {
+        document.adoptedStyleSheets = [font_stylesheet];
+    }
 
-</html>
+</script>
